--- a/src/01_cleaning_eda/bt_cleaning.ipynb
+++ b/src/01_cleaning_eda/bt_cleaning.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "4  40.602563 -115.719777   1    NaN      NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "0                       4.18          13.21          29.9  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,19 +366,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\btoli\\AppData\\Local\\Temp\\ipykernel_27924\\980918030.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\btoli\\AppData\\Local\\Temp\\ipykernel_23028\\980918030.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  first_date_fire_weather.drop(columns=[\"YEAR\", \"MO\", \"DY\", \"LAT\", \"LONG\"], inplace=True)\n",
-      "C:\\Users\\btoli\\AppData\\Local\\Temp\\ipykernel_27924\\980918030.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\btoli\\AppData\\Local\\Temp\\ipykernel_23028\\980918030.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -527,7 +527,7 @@
        "4                               0.36  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        "[1 rows x 36 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,11 +867,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df.to_csv(\"../../data/processed/wildfire_weather.csv\", index=False)\n"
+    "merged_df.reset_index().to_csv(\"../../data/processed/wildfire_weather.csv\", index=False)\n"
    ]
   },
   {
@@ -881,6 +881,319 @@
    "source": [
     "----\n",
     "Add extra dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MO</th>\n",
+       "      <th>DY</th>\n",
+       "      <th>T2MDEW</th>\n",
+       "      <th>T2MWET</th>\n",
+       "      <th>RH2M</th>\n",
+       "      <th>CLRSKY_SFC_PAR_TOT</th>\n",
+       "      <th>ALLSKY_SFC_PAR_TOT</th>\n",
+       "      <th>ALLSKY_SFC_UV_INDEX</th>\n",
+       "      <th>LAT</th>\n",
+       "      <th>LONG</th>\n",
+       "      <th>ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>7</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>13.91</td>\n",
+       "      <td>27.31</td>\n",
+       "      <td>155.74</td>\n",
+       "      <td>135.5</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>40.602563</td>\n",
+       "      <td>-115.719777</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   YEAR  MO  DY  T2MDEW  T2MWET   RH2M  CLRSKY_SFC_PAR_TOT  \\\n",
+       "0  2020   7  19    3.02   13.91  27.31              155.74   \n",
+       "\n",
+       "   ALLSKY_SFC_PAR_TOT  ALLSKY_SFC_UV_INDEX        LAT        LONG  ID  \n",
+       "0               135.5                 2.55  40.602563 -115.719777   1  "
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extra_weather = pd.read_csv('../../data/raw/nasa_weather_extra.csv')\n",
+    "\n",
+    "extra_weather.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extra_weather.drop(columns=['YEAR', 'MO', 'DY', 'LAT', 'LONG'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extra_weather.drop_duplicates(keep='first', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extra_weather.set_index('ID', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dew_frost_point_2m</th>\n",
+       "      <th>wet_bulb_temp_2m</th>\n",
+       "      <th>relative_humidity</th>\n",
+       "      <th>clear_sky_photosynthetically_active_radiation</th>\n",
+       "      <th>all_sky_photosynthetically_active_radiation</th>\n",
+       "      <th>all_sky_surface_uv_index</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.02</td>\n",
+       "      <td>13.91</td>\n",
+       "      <td>27.31</td>\n",
+       "      <td>155.74</td>\n",
+       "      <td>135.5</td>\n",
+       "      <td>2.55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    dew_frost_point_2m  wet_bulb_temp_2m  relative_humidity  \\\n",
+       "ID                                                            \n",
+       "1                 3.02             13.91              27.31   \n",
+       "\n",
+       "    clear_sky_photosynthetically_active_radiation  \\\n",
+       "ID                                                  \n",
+       "1                                          155.74   \n",
+       "\n",
+       "    all_sky_photosynthetically_active_radiation  all_sky_surface_uv_index  \n",
+       "ID                                                                         \n",
+       "1                                         135.5                      2.55  "
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# extra_weather.rename(columns={\n",
+    "#   'T2MDEW': 'dew_frost_point_2m',\n",
+    "#   'T2MWET': 'wet_bulb_temp_2m',\n",
+    "#   'RH2M': 'relative_humidity',\n",
+    "#   'CLRSKY_SFC_PAR_TOT': 'clear_sky_photosynthetically_active_radiation',\n",
+    "#   'ALLSKY_SFC_PAR_TOT': 'all_sky_photosynthetically_active_radiation',\n",
+    "#   'ALLSKY_SFC_UV_INDEX': 'all_sky_surface_uv_index'\n",
+    "# }, inplace=True)\n",
+    "\n",
+    "extra_weather.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = merged_df.merge(extra_weather, how='left', left_index=True, right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39219, 42)"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['x', 'y', 'containmentdatetime', 'controldatetime', 'dailyacres',\n",
+       "       'discoveryacres', 'firecause', 'firediscoverydatetime',\n",
+       "       'incidenttypecategory', 'incidenttypekind', 'initiallatitude',\n",
+       "       'initiallongitude', 'irwinid', 'localincidentidentifier', 'poocounty',\n",
+       "       'poodispatchcenterid', 'poofips', 'poostate', 'uniquefireidentifier',\n",
+       "       'temp_2m', 'temp_2m_max', 'humidity', 'rain', 'wind_speed_2m',\n",
+       "       'wind_speed_2m_max', 'wind_speed_10m', 'wind_speed_10m_max',\n",
+       "       'surface_soil_wetness_5cm_below', 'surface_soil_wetness_to_bedrock',\n",
+       "       'wind_speed_2m_mean', 'wind_speed_2m_max_mean', 'wind_speed_10m_mean',\n",
+       "       'wind_speed_10m_max_mean', 'humidity_mean', 'temp_2m_mean', 'rain_sum',\n",
+       "       'dew_frost_point_2m', 'wet_bulb_temp_2m', 'relative_humidity',\n",
+       "       'clear_sky_photosynthetically_active_radiation',\n",
+       "       'all_sky_photosynthetically_active_radiation',\n",
+       "       'all_sky_surface_uv_index'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39219, 42)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df[merged_df['dailyacres'] > 1].shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop -999.00"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = merged_df[(merged_df != -999.00).all(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.to_csv('../../data/cleaned/bigger_wildfire_weather_extra.csv', index=False)"
    ]
   },
   {
