--- a/src/00_collect_data/nasa_api_data_collection.ipynb
+++ b/src/00_collect_data/nasa_api_data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "\n",
     "import requests\n",
     "import re\n",
-    "import io"
+    "import io\n",
+    "\n",
+    "from datetime import timedelta"
    ]
   },
   {
@@ -44,7 +46,7 @@
     "        response_df = pd.read_csv(io.StringIO(split_text[1]))\n",
     "        response_df[\"LAT\"] = lat\n",
     "        response_df[\"LONG\"] = long\n",
-    "        response_df[\"ID\"] = id\n",
+    "        response_df[\"PID\"] = id\n",
     "        result_df = pd.concat([result_df, response_df])\n",
     "        return result_df\n",
     "        \n",
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +209,7 @@
        "1               NVEIC    32007    US-NV   2020-NVECFX-010145   1  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,6 +319,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nasa_df.rename(columns={\n",
+    "  'T2MDEW': 'dew_frost_point_2m',\n",
+    "  'T2MWET': 'wet_bulb_temp_2m',\n",
+    "  'RH2M': 'relative_humidity',\n",
+    "  'CLRSKY_SFC_PAR_TOT': 'clear_sky_photosynthetically_active_radiation',\n",
+    "  'ALLSKY_SFC_PAR_TOT': 'all_sky_photosynthetically_active_radiation',\n",
+    "  'ALLSKY_SFC_UV_INDEX': 'all_sky_surface_uv_index'\n",
+    "}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
@@ -335,33 +353,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_request_param(id, lat, long, start_date, end_date, result_df, base_uri):\n",
+    "    params = f\"latitude={lat}&longitude={long}&start={start_date.strftime('%Y')}&end={end_date.strftime('%Y')}\"\n",
+    "    base_uri += params\n",
+    "\n",
+    "    res = requests.get(base_uri)\n",
+    "\n",
+    "    split_text = res.text.split(\"-END HEADER-\")\n",
+    "\n",
+    "    if len(split_text) >= 2:\n",
+    "        response_df = pd.read_csv(io.StringIO(split_text[1]))\n",
+    "        response_df[\"PID\"] = id\n",
+    "        result_df = pd.concat([result_df, response_df])\n",
+    "        return result_df\n",
+    "        \n",
+    "    return result_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "nasa_last_180_prec_df = pd.DataFrame()\n",
     "parameters = \"parameters=PRECTOTCORR_SUM,PRECSNO\"\n",
-    "base_uri = f\"https://power.larc.nasa.gov/api/temporal/daily/point?time-standard=lst&header=true&format=csv&community=sb&{parameters}&\"\n",
+    "base_uri = f\"https://power.larc.nasa.gov/api/temporal/monthly/point?header=true&format=csv&community=sb&{parameters}&\"\n",
     "\n",
     "for i in filtered_df.index:\n",
-    "    nasa_df = build_request_param(\n",
+    "    nasa_last_180_prec_df = build_request_param(\n",
     "        filtered_df.loc[i, 'id'],\n",
     "        filtered_df.loc[i, \"InitialLatitude\"],\n",
     "        filtered_df.loc[i, \"InitialLongitude\"],\n",
     "        filtered_df.loc[i, \"FireDiscoveryDateTime\"] - pd.tseries.offsets.DateOffset(months=6),\n",
     "        filtered_df.loc[i, \"FireDiscoveryDateTime\"],\n",
-    "        nasa_df,\n",
+    "        nasa_last_180_prec_df,\n",
+    "        base_uri,\n",
+    "    )\n",
+    "\n",
+    "test_df = build_request_param(\n",
+    "        filtered_df.loc[1, 'id'],\n",
+    "        filtered_df.loc[1, \"InitialLatitude\"],\n",
+    "        filtered_df.loc[1, \"InitialLongitude\"],\n",
+    "        filtered_df.loc[1, \"FireDiscoveryDateTime\"] - pd.tseries.offsets.DateOffset(months=12),\n",
+    "        filtered_df.loc[1, \"FireDiscoveryDateTime\"],\n",
+    "        nasa_last_180_prec_df,\n",
     "        base_uri,\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PARAMETER</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>JAN</th>\n",
+       "      <th>FEB</th>\n",
+       "      <th>MAR</th>\n",
+       "      <th>APR</th>\n",
+       "      <th>MAY</th>\n",
+       "      <th>JUN</th>\n",
+       "      <th>JUL</th>\n",
+       "      <th>AUG</th>\n",
+       "      <th>SEP</th>\n",
+       "      <th>OCT</th>\n",
+       "      <th>NOV</th>\n",
+       "      <th>DEC</th>\n",
+       "      <th>ANN</th>\n",
+       "      <th>ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PRECSNO</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PRECTOTCORR_SUM</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>52.73</td>\n",
+       "      <td>21.09</td>\n",
+       "      <td>26.37</td>\n",
+       "      <td>10.55</td>\n",
+       "      <td>21.09</td>\n",
+       "      <td>26.37</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>5.27</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>31.64</td>\n",
+       "      <td>21.09</td>\n",
+       "      <td>216.21</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PRECSNO</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PRECTOTCORR_SUM</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>21.09</td>\n",
+       "      <td>63.28</td>\n",
+       "      <td>5.27</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.27</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.27</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>100.20</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PRECSNO</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         PARAMETER  YEAR    JAN    FEB    MAR    APR    MAY    JUN  JUL   AUG  \\\n",
+       "0          PRECSNO  2020   1.32   0.66   0.66   0.00   0.00   0.00  0.0  0.00   \n",
+       "1  PRECTOTCORR_SUM  2020  52.73  21.09  26.37  10.55  21.09  26.37  0.0  0.00   \n",
+       "0          PRECSNO  2020   0.00   0.00   0.00   0.00   0.00   0.00  0.0  0.00   \n",
+       "1  PRECTOTCORR_SUM  2020   0.00  21.09  63.28   5.27   0.00   0.00  0.0  5.27   \n",
+       "0          PRECSNO  2019   0.66   1.98   0.66   0.00   0.00   0.00  0.0  0.00   \n",
+       "\n",
+       "    SEP  OCT    NOV    DEC     ANN  ID  \n",
+       "0  0.00  0.0   0.66   0.66    0.00   1  \n",
+       "1  5.27  0.0  31.64  21.09  216.21   1  \n",
+       "0  0.00  0.0   0.00   0.00    0.00   5  \n",
+       "1  0.00  0.0   5.27   0.00  100.20   5  \n",
+       "0  0.00  0.0   0.00   1.32    0.66  10  "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "nasa_last_180_prec_df.head(1)"
+    "test_df.head()\n"
    ]
   },
   {
@@ -369,8 +580,104 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Timestamp('2020-01-19 23:00:00+0000', tz='UTC'),)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "nasa_df.to_csv(\"../../data/raw/nasa_weather_last_180days.csv\", index=False)\n"
+    "filtered_df.loc[1, \"FireDiscoveryDateTime\"] - pd.tseries.offsets.DateOffset(months=6),"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nasa_last_180_prec_df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nasa_last_180_prec_df.to_csv(\"../../data/raw/nasa_weather_last_180days.csv\", index=False)\n"
    ]
   }
  ],
